# BasicCppCiCd

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
app/src/: main.cpp
docker/AH/: Dockerfile  Dockerfile.build  Dockerfile.dev-env  Dockerfile.op  Dockerfile.ops-env  README.md  docker-build.bat  docker-dev-env-build.sh  docker-dev-env-run.sh  docker-multistage-build.sh  docker-multistage-run.sh  docker-ops-env-build.sh  docker-ops-env-run.sh
docker/all-platforms/: docker-compose.yml  linux-dev.env  windows-dev.env
docker/container-build/: Dockerfile  README.md  docker-build.bat  docker-build.sh  docker-delete-all-images.bat  docker-run-shell-limited.sh  docker-run-shell.bat  docker-run-shell.sh
docker/linux/: docker-run-qtcreator.sh  docker-run-shell.sh  docker-start-qtcreator.sh
docker/windows/: docker-delete-all-images.ps1  docker-delete-all.containers.ps1  docker-run-qtcreator.ps1  docker-run-shell.ps1  docker-start-qtcreator.ps1  docker-start-sh.ps1
lib/include/: calc.h  calc_step.h  logger.h
lib/src/: calc.cpp  calc_step.cpp  logger.cpp
lib/test/src/: calc_step_test.cpp  calc_test.cpp  logger_test.cpp  main.cpp
